# piopulse

./: .gitignore  ARCHITECTURE_AUDIT_REPORT.md  Cargo.toml  DEVELOPMENT_GUIDE.md  LICENSE  PUBLISHING.md  README.en.md  README.md  TODO.md
.github/workflows/: release.yml
packaging/aur/: PKGBUILD
packaging/brew/: piopulse.rb
packaging/choco/: piopulse.nuspec
packaging/choco/tools/: chocolateyinstall.ps1
packaging/scoop/: piopulse.json
packaging/winget/: piopulse.yaml
src/: app.rs  config.rs  main.rs  nvs.rs  ui.rs  vofa.rs  worker.rs
src/ui/: channels.rs  config.rs  footer.rs  header.rs  logs.rs  modal.rs  plotter.rs  serial.rs  sidebar.rs  theme.rs  translation.rs  utils.rs
src/ui/widgets/: cube.rs  image.rs  mod.rs
