[package]
name = "piopulse"
version = "1.0.1"
edition = "2024"
description = "A terminal user interface (TUI) embedded debugger for serial debugging, telemetry plotting, dashboards, and ESP32 flashing."
license = "MIT"
repository = "https://github.com/Wang-Yang-source/piopulse"
readme = "README.md"
keywords = ["esp32", "flashing", "tui", "production-line", "esptool"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
ratatui = "0.26.2"
crossterm = { version = "0.27.0", features = ["event-stream"] }
tokio = { version = "1.38", features = ["full"] }
serialport = "4.3.0"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "1.1.2"
chrono = "0.4"
futures = "0.3"
espflash = { version = "4.4.0", default-features = false, features = ["serialport"] }
crc32fast = "1.5.0"
unicode-width = "0.2.2"
sha2 = "0.10.9"
regex = "1.10"
